# schelling

./: .gitignore  .vercelignore  BACKTEST.md  CLAUDE.md  DECISIONS.md  FORECAST-INTERVALS.json  FORECASTS.md  GRADING-Q-2026-IAEA-SEP.md  GRADING-Q-2026-OPEC-SEP.md  GRADING-Q-2026-USIRAN-STAGE2.md  README.md  STATUS.md  pyproject.toml  vercel.json
.github/workflows/: ci.yml
data/coercive-cases/: README.md  ktab-china-2014.json
data/coercive-cases/drafts/: ktab-japan-2017-scaffold.json
data/concepts/: canon.md
docs/: AUDIT-2026-07-EXPLAINED.md  AUDIT-2026-07.md  BUILD_PLAN.md  GRADING-TEMPLATE.md  LLM-BASELINE.md  PHASE-C-GATE.md  PRECEDENTS.md  findings.html  index.html  ledger.html  paper.html  site.css
docs/outreach/: scholz-email.md
docs/papers/: scholz_extract.md
docs/questions/: question-iaea-sep.md  question-opec-sep.md
docs/reports/: Q-2026-IAEA-SEP.report.html  Q-2026-USIRAN-STAGE2.advise-iran.html  Q-2026-USIRAN-STAGE2.advise-mediators.html  Q-2026-USIRAN-STAGE2.advise-us.html  Q-2026-USIRAN-STAGE2.report.html  index.html
ledger-proofs/: FORECASTS.md-15d075c4e8a5.ots  FORECASTS.md-19eace2a1f22.ots  FORECASTS.md-1dc2793784f2.ots  FORECASTS.md-40f5cb81c8d3.ots  FORECASTS.md-40f5cb81c8d3.ots.bak  FORECASTS.md-4d96913cb174.ots  FORECASTS.md-5942fe775e92.ots  FORECASTS.md-5942fe775e92.ots.bak  FORECASTS.md-996492efceb7.ots  FORECASTS.md-a50225c9466a.ots  FORECASTS.md-bf2cabc9579c.ots  FORECASTS.md-d7d31fca7758.ots  FORECASTS.md-d7d31fca7758.ots.bak  FORECASTS.md-dd7d84cfb3de.ots  FORECASTS.md-eabbb3c9d365.ots  FORECASTS.md-f2237f750175.ots  README.md
paper/: BIBLIOGRAPHY.md  DRAFT.md  EVIDENCE.md  OUTLINE.md
paper/draft/: 00-abstract.md  01-introduction.md  02-replication.md  03-fair-fight.md  04-successor-search.md  05-oracle-ceiling.md  06-reinterpretation.md  07-case-library.md  08-ledger.md  09-limitations.md  10-conclusion.md
paper/preprint/: manuscript.md  ssrn-metadata.md
specs/: MT-1.0.md
src/schelling/: __init__.py  cli.py
src/schelling/advise/: __init__.py  moves.py  moves.yaml  search.py  strategy.py
src/schelling/analog/: __init__.py  icb.py  icb_analogs.json
src/schelling/backtest/: __init__.py  capability.py  coercive.py  context.py  deu.py  deu3_candidate_gravity.json  deu3_candidate_regime.json  deu3_split.json  harness.py  ledger.py  model_three.py  oracle.py  scoring.py  split.py  successor.py  verify.py  writeup.py
src/schelling/dossier/: assemble.py  narrative.py  pdf.py
src/schelling/formalizer/: __init__.py  client.py  firewall.py  formalize.py  prompt.py  schemas.py
src/schelling/knowledge/: __init__.py  (+4 more)
tests/: conftest.py  test_advise.py  test_analog.py  test_backtest.py  test_chunker.py  test_cli.py  test_coercive.py  test_convergence.py  test_correlated_sampling.py  test_dossier.py  test_engine_version.py  test_expected_utility.py  test_fairfight.py  test_formalizer.py  test_integrity.py  test_knowledge.py  test_ledger_seal.py  test_llm_forecast.py  test_mc.py  test_model.py  test_model_three.py  test_narrative.py  test_octants.py  test_paper.py  test_phase_c_solvers.py  test_power.py  test_precedents.py  test_replication.py  test_report.py  test_research.py  test_risk.py  test_rounds.py  test_rubric_lookup.py  test_sampling.py  test_schemas.py  test_scoring.py  test_search.py  test_sensitivity.py  test_site.py  test_sobol.py  (+4 more)
tests/fixtures/: coercive_sample.json  deu_sample.csv  emission_standards.json  emission_standards_widened.json  formalize_replay.json  toy_3actor.json  web_search_response.json
(+71 files in other folders)
