[project]
name = "schelling"
version = "0.0.0"
description = "An open, continuously-audited strategic forecasting engine: bounded geopolitical questions to formal bargaining games to deterministic solutions to probability forecasts with complete audit trails."
readme = "README.md"
requires-python = "==3.12.*"
license = { text = "AGPL-3.0-or-later" }
authors = [{ name = "Schelling contributors" }]
dependencies = [
    "pydantic>=2.6",
    "numpy>=1.26",
    "typer>=0.12",
    "sqlite-vec>=0.1.7",
    "pyyaml>=6.0",
    "python-dotenv>=1.0",
    "opentimestamps-client>=0.7.2",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "ruff>=0.4",
    "mypy>=1.9",
    "types-PyYAML>=6.0",
]
# The bge-m3 local embedder (BUILD_PLAN §7). Heavy (torch + a ~2GB model that downloads on
# first use, needs network). Not required for tests, which inject a deterministic embedder.
knowledge = [
    "sentence-transformers>=3.0",
]
# The Claude client for the formalizer (§ Phase 1). Not required for tests, which inject a
# record/replay client so CI never calls the live API.
formalize = [
    "anthropic>=0.40",
]

[project.scripts]
schelling = "schelling.cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/schelling"]

# ---------------------------------------------------------------------------
# pytest
# ---------------------------------------------------------------------------
[tool.pytest.ini_options]
minversion = "8.0"
testpaths = ["tests"]
addopts = "-ra --strict-markers --strict-config"
pythonpath = ["src"]

# ---------------------------------------------------------------------------
# ruff
# ---------------------------------------------------------------------------
[tool.ruff]
line-length = 100
target-version = "py312"
src = ["src", "tests"]

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "N",   # pep8-naming
    "UP",  # pyupgrade
    "B",   # flake8-bugbear
    "SIM", # flake8-simplify
    "RUF", # ruff-specific
]
# N803/N806: BDM/Scholz notation uses single upper-case symbols (R, U, P, EU_ij).
# Faithfulness to the paper's equations beats PEP-8 casing in the solver math.
ignore = ["N803", "N806"]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["N802"]
# typer's declarative API intentionally puts Option/Argument calls in parameter defaults.
"src/schelling/cli.py" = ["B008"]

# ---------------------------------------------------------------------------
# mypy  — strict on the solver (per BUILD_PLAN §1); strict globally here since
# the codebase is new and small enough to hold the line from commit one.
# ---------------------------------------------------------------------------
[tool.mypy]
python_version = "3.12"
strict = true
plugins = ["pydantic.mypy"]
files = ["src/schelling", "tests"]

[[tool.mypy.overrides]]
# Tests may use dynamically-typed fixtures; keep them checked but not strict-fatal.
module = "tests.*"
disallow_untyped_decorators = false

[[tool.mypy.overrides]]
# Third-party deps without type stubs / optional extras that may be absent in CI.
module = ["sqlite_vec", "sentence_transformers", "sentence_transformers.*", "anthropic", "anthropic.*"]
ignore_missing_imports = true

[tool.pydantic-mypy]
init_forbid_extra = true
init_typed = true
warn_required_dynamic_aliases = true
